archived/workshop03/workshop03.old/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
   name: weather-egressgateway

spec:
   selector:
      istio: egressgateway

   servers:
   - hosts:
     - api.openweathermap.org
     port:
        number: 80
        name: http
        protocol: HTTP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
   name: weather-egress-virtualservice

spec:
   hosts:
   - api.openweathermap.org
   gateways:
   - mesh
   - weather-egressgateway
   http:
   - match:
     - gateways:
       - mesh
       port: 80
     route:
     - destination:
         host: istio-egressgateway.istio-system.svc.cluster.local
       weight: 100
   - match:
     - gateways:
       - weather-egressgateway
       port: 80
     route:
     - destination:
         host: api.openweathermap.org
       weight: 100
